# red_botpp

./: CMakeLists.txt  TODO.txt
includes/: BotDatabase.hpp  GuildUser.hpp  audioUtils.h  botDatabase.h  botDatabase.hpp  command.h  dppUtils.h  eco_command.h  main.h
src/: BotDatabase.cpp  GuildUser.cpp  audioUtils.cpp  botDatabase.cpp  commandHandler.cpp  dppUtils.cpp  main.cpp  messageHandler.cpp
src/commands/: commandCringe.cpp  commandEco.cpp  commandJoin.cpp  commandLeave.cpp  commandList.cpp  commandPing.cpp  commandPlay.cpp  commandRepeat.cpp  commandTest.cpp
src/commands/eco/: commandEcoBalance.cpp  commandEcoDaily.cpp  commandEcoDeposit.cpp  commandEcoGive.cpp  commandEcoLeaderboard.cpp  commandEcoSteal.cpp  commandEcoWithdraw.cpp
